# analyst-project

./: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml
00-overview/: Current_System_Migration_Plan.md  Implementation_Status.md  Product_Vision.md  Selfie_Smoke_Test_Status.md  Workstream_Plan.md
analyst/: contracts.py  env.py  utils.py
analyst-delivery/: README.md
analyst-engine/: README.md
analyst-information/: README.md
analyst-integration/: README.md
analyst-runtime/: README.md
analyst-shared/: README.md
analyst/agents/: README.md  __init__.py  base.py
analyst/analysis/: README.md  __init__.py  artifact.py
analyst/delivery/: README.md  bot.py  bot_companion_timing.py  bot_history.py  bot_media.py  companion_schedule.py  image_decision.py  injection_scanner.py  outreach_dedup.py  relay_eval.py  relay_scenarios.py  soul.py  user_chat.py
analyst/engine/: README.md  __init__.py  agent_loop.py  live_types.py
analyst/mcp/: README.md
analyst/memory/: README.md  companion_self_state.py  profile.py  service.py  topic_state.py
analyst/runtime/: README.md  __init__.py  capabilities.py  chat.py  environment_adapter.py
analyst/sandbox/: README.md  container_runner.py  limits.py
analyst/storage/: README.md  __init__.py  sqlite.py  sqlite_analysis.py  sqlite_calendar_normalization.py  sqlite_core.py  sqlite_documents.py  sqlite_market_macro.py  sqlite_records.py  (+1 more)
code-toolkit/: README.md  deploy.sh  main.py  requirements.txt
docs/: chatbot-features.md  macro_data_service.md  sales_agent_soul_v2.md
tests/: test_analysis_operators.py  test_artifact_cache.py  test_bis.py  test_bot_media_and_history.py  test_brokers.py  test_calendar_normalization.py  test_capabilities.py  test_cli.py  test_cold_outreach.py  test_companion_checkins.py  test_companion_schedule.py  test_companion_self_state.py  test_companion_tool_integration.py  test_conversation_service.py  test_document_extraction.py  test_document_simulation.py  test_document_storage.py  test_ecb.py  test_eia.py  test_eurostat.py  test_fred.py  test_gov_report.py  test_group_chat_and_reminders.py  test_group_intervention.py  test_group_relational_roles.py  test_image_decision.py  test_image_gen.py  test_imf.py  test_injection_scanner.py  test_live_photo.py  test_macro_data_integration.py  test_mcp_bridge.py  test_memory.py  test_news_ingestion.py  test_nickname_extraction.py  test_obs_family.py  test_oecd.py  test_oecd_sources.py  test_openrouter_runtime.py  test_outreach_dedup.py  (+26 more)
ws1-engine/: WS1_Macro_Engine.md
ws2-delivery/: WS2_Delivery_Shell.md
ws3-discovery/: WS3_Customer_Discovery.md
ws4-integration/: WS4_Integration.md
ws5-gtm/: WS5_Go_To_Market.md
(+266 files in other folders)
