[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analyst-project"
version = "0.1.0"
description = "Standalone Analyst product scaffold"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "curl_cffi",
    "feedparser",
    "httpx",
    "imageio-ffmpeg",
    "markdownify",
    "mmh3>=4.1.0",
    "openai>=1.10.0",
    "Pillow",
    "playwright",
    "playwright-stealth",
    "python-telegram-bot[job-queue]>=21.0,<22",
    "PyYAML",
    "readability-lxml",
    "requests",
    "numpy>=1.24",
    "yfinance",
]

[project.scripts]
analyst-cli = "analyst.cli:main"
analyst-macro-data = "analyst.macro_data.cli:main"
analyst-telegram = "analyst.delivery.bot:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "live: hits real external endpoints and is skipped by default unless explicitly selected",
]
