[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analyst-project"
version = "0.1.0"
description = "Standalone Analyst product scaffold"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "curl_cffi",
    "feedparser",
    "httpx",
    "imageio-ffmpeg",
    "markdownify",
    "mmh3>=4.1.0",
    "openai>=1.10.0",
    "Pillow",
    "playwright",
    "playwright-stealth",
    "python-telegram-bot[job-queue]>=21.0,<22",
    "PyYAML",
    "readability-lxml",
    "requests",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "python-docx>=1.0",
    "telethon>=1.36",
    "yfinance",
]

[project.scripts]
analyst-cli = "analyst.cli:main"
analyst-relay = "analyst.delivery.relay:main"
analyst-relay-eval = "analyst.delivery.relay_eval:main"
analyst-telegram = "analyst.delivery.bot:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "live: hits real external endpoints and is skipped by default unless explicitly selected",
]
